--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -54,20 +54,17 @@
       <version>1.0-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>spirit</groupId>
-      <artifactId>framework</artifactId>
+      <artifactId>model</artifactId>
       <version>1.0-SNAPSHOT</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.7.0</version>
-    </dependency>
-    <dependency>
-      <groupId>spirit</groupId>
-      <artifactId>service</artifactId>
-      <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
   <build>
@@ -117,6 +114,17 @@
             </protoModule>
             <protoModule>
               <source>proto/testMessage.proto</source>
+              <outputDir>src/main/java</outputDir>
+              <output>java_bean</output>
+              <encoding>UTF-8</encoding>
+              <options>
+                <property>
+                  <name>generate_field_map</name>
+                </property>
+              </options>
+            </protoModule>
+            <protoModule>
+              <source>proto/testPara.proto</source>
               <outputDir>src/main/java</outputDir>
               <output>java_bean</output>
               <encoding>UTF-8</encoding>
