--- a/web/src/main/resources/conf/jdbc.properties
+++ b/web/src/main/resources/conf/jdbc.properties
@@ -1,3 +1,4 @@
+#mybatis 配置中的替换项
 jdbc_driverClassName=com.mysql.jdbc.Driver
 jdbc_url=jdbc:mysql://localhost:3306/mydays?useUnicode=true&amp;characterEncoding=utf-8
 jdbc_username=root
