--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -26,5 +26,10 @@
       <artifactId>model</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.0.1</version>
+    </dependency>
   </dependencies>
 </project>
