--- a/web/pom.xml
+++ b/web/pom.xml
@@ -12,7 +12,12 @@
   <name>web Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>5.1.6</version>
+      </dependency>
+      <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
@@ -82,6 +87,22 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.29</version>
     </dependency>
+
+      <dependency>
+          <groupId>commons-fileupload</groupId>
+          <artifactId>commons-fileupload</artifactId>
+          <version>1.3.1</version>
+      </dependency>
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.4</version>
+      </dependency>
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>jstl</artifactId>
+          <version>1.2</version>
+      </dependency>
       <!-- -->
       <dependency>
           <groupId>spirit</groupId>
@@ -104,6 +125,16 @@
           <version>1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>javax.servlet-api</artifactId>
+          <version>3.1-b08</version>
+      </dependency>
+      <!--<dependency>-->
+          <!--<groupId>taglibs</groupId>-->
+          <!--<artifactId>standard</artifactId>-->
+          <!--<version>1.1.2</version>-->
+      <!--</dependency>-->
+      <dependency>
           <groupId>org.mortbay.jetty</groupId>
           <artifactId>jsp-2.1</artifactId>
           <version>6.0.0</version>
@@ -113,7 +144,11 @@
           <artifactId>jackson-mapper-asl</artifactId>
           <version>1.9.10</version>
       </dependency>
-
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-annotations</artifactId>
+          <version>2.3.3</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>web</finalName>
