--- a/web/src/main/resources/conf/jdbc.properties
+++ b/web/src/main/resources/conf/jdbc.properties
@@ -1,5 +1,5 @@
 #mybatis 配置中的替换项
 jdbc_driverClassName=com.mysql.jdbc.Driver
-jdbc_url=jdbc:mysql://localhost:3306/mydays?useUnicode=true&amp;characterEncoding=utf-8
+jdbc_url=jdbc:mysql://localhost:3306/snotice_server?useUnicode=true&amp;characterEncoding=utf-8
 jdbc_username=root
 jdbc_password=123456
