--- a/model/pom.xml
+++ b/model/pom.xml
@@ -23,5 +23,10 @@
       <artifactId>jackson-annotations</artifactId>
       <version>2.3.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+      <version>1.5.0</version>
+    </dependency>
   </dependencies>
 </project>
