--- a/web/pom.xml
+++ b/web/pom.xml
@@ -87,6 +87,11 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.29</version>
     </dependency>
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.3</version>
+      </dependency>
 
       <dependency>
           <groupId>commons-fileupload</groupId>
