--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,20 @@
       <artifactId>druid</artifactId>
       <version>1.0.12</version>
     </dependency>
+
+      <!--webMagic -->
+      <dependency>
+          <groupId>us.codecraft</groupId>
+          <artifactId>webmagic-extension</artifactId>
+          <version>0.5.2</version>
+          <exclusions>
+              <exclusion>
+                  <groupId>org.slf4j</groupId>
+                  <artifactId>slf4j-log4j12</artifactId>
+              </exclusion>
+          </exclusions>
+      </dependency>
+
   </dependencies>
   <modules>
     <module>service</module>
