--- a/spider/pom.xml
+++ b/spider/pom.xml
@@ -7,9 +7,9 @@
     <artifactId>Snotice-server</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>service</artifactId>
+  <artifactId>spider</artifactId>
   <packaging>jar</packaging>
-  <name>service</name>
+  <name>spider</name>
   <url>http://maven.apache.org</url>
 
   <dependencies>
@@ -18,17 +18,6 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>spirit</groupId>
-      <artifactId>model</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-
-    <dependency>
-      <groupId>spirit</groupId>
-      <artifactId>dao</artifactId>
-      <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
