--- a/web/pom.xml
+++ b/web/pom.xml
@@ -12,11 +12,11 @@
   <name>web Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-      <dependency>
-          <groupId>mysql</groupId>
-          <artifactId>mysql-connector-java</artifactId>
-          <version>5.1.6</version>
-      </dependency>
+      <!--<dependency>-->
+          <!--<groupId>mysql</groupId>-->
+          <!--<artifactId>mysql-connector-java</artifactId>-->
+          <!--<version>5.1.6</version>-->
+      <!--</dependency>-->
       <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -205,7 +205,7 @@
                 <source>1.6</source>
                 <target>1.6</target>
                 <encoding>utf8</encoding> 
-    </configuration>
+                </configuration>
 </plugin>
      </plugins>
   </build>
